fixed spacing weather summar css

--- a/lesson06/css/small.css
+++ b/lesson06/css/small.css
@@ -189,13 +189,12 @@ main div img {
     border: 2px solid #f68e36;
     border-radius: 1px;
     text-align: center;
-    font-size: 10px;
+    font-size: 9px;
     padding-left:  .75rem;
     padding-right: .75rem;
 }
 .weathersummary p{
     margin: 0;
-    padding-left:  .75rem;
     text-align: left;
 }
 
